# conan-poc-cppstd

./: README.md  c3i.py
advanced/: compatible_valid.sh  compile_invalid.py  compile_invalid.sh  cppstd_invalid.py  cppstd_invalid.sh
basic/: compatible.py  compatible.sh  compatible_groups.py  compatible_groups.sh  compatible_valid.py  valid_range.py  valid_range.sh
multi/: all.sh  api111417_abi111417.py  bleeding_edge.py  boost.py  conanfile.py  consumer.py  consumer.txt  icu.py  py_req.py  pyreq.py  zlib.py
multi/src/: CMakeLists.txt  bleeding_edge.cpp  boost.cpp  consumer.cpp  header.h  icu.cpp  main.cpp  source.cpp  zlib.cpp
profiles/: cpp11  cpp14  cpp17  cpp20  cpp98  default
src/: CMakeLists.txt  main.cpp
